# Raya

./: .gitignore  CMakeLists.txt  config.toml
data/: self_model.json
include/: EmbeddingClient.h  IOpenAIChat.h  OpenAIChatImpl.h
include/common/: ILogger.h  UserOutput.h
include/config/: Config.h
include/core/: AgentMainLoop.h  EchoMessageHandler.h  IMessageHandler.h  LLMMessageHandler.h  SelfModelManager.h
include/event/: Event.h  EventPriority.h  IEventQueue.h  MockEventQueue.h  PriorityEventQueue.h  PriorityResolver.h
include/telegram/: AuthState.h  ChatInfo.h  ITelegramClient.h  Message.h  MockTelegramClient.h  RetryPolicy.h  TdConfig.h
prompts/: system.md
src/: AgentMainLoop.cpp  Config.cpp  EchoMessageHandler.cpp  EmbeddingClient.cpp  LLMMessageHandler.cpp  MockEventQueue.cpp  MockTelegramClient.cpp  MockTelegramClient.h  OpenAIChatImpl.cpp  PriorityEventQueue.cpp  PriorityResolver.cpp  SelfModelManager.cpp  TelegramClient.cpp  TelegramClient.h  ToolRegistry.cpp  UserOutput.cpp  main.cpp
tdlib/lib/cmake/Td/: TdStaticTargets.cmake  TdTargets-release.cmake
tdlib/lib/pkgconfig/: tdclient.pc  tdcore.pc  tddb.pc  tde2e.pc  tdjson.pc  tdjson_private.pc  tdjson_static.pc  tdmtproto.pc  tdnet.pc
tdlib_build/: CTestTestfile.cmake  DartConfiguration.tcl  compile_commands.json  install_manifest.txt
tdlib_build/benchmark/: CTestTestfile.cmake  bench_actor  bench_crypto  bench_db  bench_empty  bench_handshake  bench_http  bench_http_reader  bench_http_server  bench_http_server_cheat  bench_http_server_fast  bench_log  bench_misc  bench_queue  bench_tddb  check_tls  rmdir  wget
tdlib_build/pkgconfig/: tdactor.pc  tdapi.pc  tdsqlite.pc  tdutils.pc
tdlib_build/sqlite/: CTestTestfile.cmake
tdlib_build/td/generate/: CTestTestfile.cmake  generate_c  generate_common  generate_json  generate_mtproto  td_generate_java_api
tdlib_build/td/generate/tl-parser/: CTestTestfile.cmake  tl-parser
tdlib_build/td/telegram/: GitCommitHash.cpp
tdlib_build/tdactor/: CTestTestfile.cmake  example
tdlib_build/tddb/: CTestTestfile.cmake  binlog_dump
tdlib_build/tde2e/: CTestTestfile.cmake
tdlib_build/tdnet/: CTestTestfile.cmake
tdlib_build/tdtl/: CTestTestfile.cmake
tdlib_build/tdutils/: CTestTestfile.cmake
tdlib_build/tdutils/generate/: CTestTestfile.cmake  generate_mime_types_gperf
tdlib_build/test/: CTestTestfile.cmake
tests/: AgentMainLoopTests.cpp  EventQueueTests.cpp  TelegramClientTests.cpp
